# swagger-codegen-dist/v1_list_books_response.go
@@ -1,0 +1,19 @@
+/*
+ * shelves.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type V1ListBooksResponse struct {
+
+	// The field name should match the noun \"books\" in the method name.  There will be a maximum number of items returned based on the page_size field in the request.
+	Books []V1Book `json:"books,omitempty"`
+
+	// Token to retrieve the next page of results, or empty if there are no more results in the list.
+	NextPageToken string `json:"next_page_token,omitempty"`
+}
